--- a/html/login2.html
+++ b/html/login2.html
@@ -18,13 +18,11 @@
             </form>
             <button id="register" onclick="register()">LOGIN</button> <br /><br />
             <button id="myBtn">Forgot Password</button>
-            <p class="message">Doesn't have an account? <a
-                    href="H:\projects\animated-register\register2.html">REGISTER</a></p>
+            <p class="message">Doesn't have an account? <a href="../html/register2.html">REGISTER</a></p>
         </div>
     </div>
 
     <div id="myModal" class="modal">
-
         <div class="modal-content">
             <span class="close">&times;</span>
             <form class="login-form">
